<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_workout">

    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.lukasnewman.runwithfriends.ui.workout.WorkoutFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.lukasnewman.runwithfriends.ui.feed.FeedFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.lukasnewman.runwithfriends.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>
